--- a/argocd-nginx.yaml
+++ b/argocd-nginx.yaml
@@ -10,8 +10,8 @@ spec:
   project: default
   source:
     # path to the folder with the YAML manifests
-    path: exercises/manifests
-    repoURL: https://github.com/udacity/nd064_course_1 
+    path: python-manifests
+    repoURL: https://github.com/codebueno/argocd-demo
     targetRevision: HEAD
   # Sync policy
   syncPolicy: {}
