--- a/helm-python-helloworld/templates/deployment.yaml
+++ b/helm-python-helloworld/templates/deployment.yaml
@@ -2,14 +2,14 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: python-helloworld
-  name: python-helloworld
+    app: helm-python-helloworld
+  name: helm-python-helloworld
   namespace: {{ .Values.namespace.name }} 
 spec:
   replicas: {{ .Values.replicaCount }} 
   selector:
     matchLabels:
-      app: python-helloworld
+      app: helm-python-helloworld
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        app: python-helloworld
+        app: helm-python-helloworld
     spec:
       containers:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
