adding nginx files

--- a/argocd-helm-nginx-prod.yaml
+++ b/argocd-helm-nginx-prod.yaml
@@ -12,6 +12,6 @@ spec:
     helm:
       valueFiles:
       - values-prod.yaml
-    path: solutions/helm/nginx-deployment 
-    repoURL: https://github.com/udacity/nd064_course_1 
+    path: nginx-deployment 
+    repoURL: https://github.com/codebueno/argcd-demo
     targetRevision: HEAD
